packages/components/src/components/CodeEditor/CodeEditor.module.scss
@use "@/styles/mixins/formControl";

.codeEditor {
  outline: none;

  .codeMirror {
    @include formControl.formControl();

    position: relative;
    padding: unset;
    order: 2;

    --editor-padding: calc(
      var(--form-control--padding-y) - var(--form-control--border-width)
    );

    min-height: calc(var(--editor-padding) * 2 + var(--line-height-m));

    &:hover {
      background-color: var(--form-control--background-color--default);
    }

    &.readonly {
      border-color: var(--form-control--border-color--default);
    }

    .copyButton {
      position: absolute;
      inset-block-start: var(--form-control--padding-y);
      inset-inline-end: var(--form-control--padding-x);
      z-index: 1;
    }

    & :global(.cm-editor) {
      outline: none;

      & :global(.cm-lineNumbers .cm-gutterElement) {
        min-width: var(--code-editor--gutter-element-min-width);
      }

      & :global(.cm-foldGutter) {
        min-width: var(--code-editor--gutter-element-min-width);
        text-align: center;
      }

      & :global(.cm-panels) {
        display: none;
      }

      & :global(.cm-content) {
        padding-block: var(--form-control--padding-y);
      }

      & :global(.cm-activeLineGutter),
      & :global(.cm-activeLine) {
        background-color: color-mix(
          in srgb,
          var(--form-control--background-color--hover) 65%,
          transparent
        );
      }

      & :global(.cm-gutters) {
        border-top-left-radius: calc(var(--form-control--corner-radius) - 1px);
        border-bottom-left-radius: calc(
          var(--form-control--corner-radius) - 1px
        );
      }
    }
  }
}

